[package]
name = "advance"
version = "0.1.0"
edition = "2021"
description = "An ergonomic progress bar library"
homepage = "https://github.com/HalfVoxel/advance"
documentation = "https://docs.rs/advance"
keywords = ["progressbar", "indicator", "progress", "cli"]
categories = ["command-line-interface"]
exclude = ["/images"]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
atty = "0.2"

[dev-dependencies]
tokio = { version = "1.17", features = ["full"] } 
