[package]
name = "advance"
version = "0.1.0"
edition = "2021"
authors = ["Aron Granberg <aron.granberg@gmail.com>"]
description = "An ergonomic progress bar library"
homepage = "https://github.com/HalfVoxel/advance"
documentation = "https://docs.rs/advance"
keywords = ["progressbar", "indicator", "progress", "cli"]
categories = ["command-line-interface"]
license = "MIT"
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
    "images/*.html"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
atty = "0.2"

[dev-dependencies]
tokio = { version = "1.17", features = ["full"] } 
