[package]
name = "headway"
version = "0.1.2"
edition = "2021"
authors = ["Aron Granberg <aron.granberg@gmail.com>"]
description = "An ergonomic progress bar library"
homepage = "https://github.com/HalfVoxel/headway"
documentation = "https://docs.rs/headway"
keywords = ["progressbar", "indicator", "progress", "cli"]
categories = ["command-line-interface"]
license = "MIT"
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
    "images/*.html"
]

[dependencies]
lazy_static = "1.4"
is-terminal = "0.4"

[dev-dependencies]
tokio = { version = "1.17", features = ["full"] } 
